# rust-note

./: README.md
httpie/: Cargo.toml
httpie/src/: main.rs
kv/: Cargo.toml  abi.proto  build.rs
kv/examples/: server.rs
kv/src/: error.rs  lib.rs
kv/src/pb/: mod.rs
kv/src/service/: command_service.rs  mod.rs
kv/src/storage/: memory.rs  mod.rs
queryer/: Cargo.toml
queryer/examples/: covid.rs  dialect.rs
queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
thumbor/: Cargo.toml  abi.proto
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
